Fix leaks of mCurrentEventContent.  A few other little pieces of cleanup.  b=230270  r+sr=bryner